# Faraday-kanban-board-backend

./: .gitignore  .gitlab-ci.yml  Docker.wsgi.dockerfile  README.md  create_matrix_server.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: pyproject.toml
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/di/: dev.py
src/kanban_board/: apps.py  filters.py  models.py  urls.py
src/kanban_board/migrations/: 0001_initial.py  0002_alter_kanbanboard_group_id.py  0003_rename_performer_task_performers.py  0004_remove_kanbanboard_group_id_kanbanboard_title_and_more.py  0005_task_hidden.py
src/kanban_board/repo/: board.py  comments.py  tasks.py
src/kanban_board/serializers/: board.py  comments.py  tasks.py
src/kanban_board/services/board/: create_board.py  edit_board.py  entries.py  repo.py
src/kanban_board/services/comments/: create_comment.py  edit_comment.py  entries.py  repo.py
src/kanban_board/services/tasks/: create_task.py  delete_task.py  edit_task.py  entries.py  repo.py  restore_task.py
src/kanban_board/views/board/: board.py
src/kanban_board/views/comments/: comments.py
src/kanban_board/views/tasks/: tasks.py
src/kanban_board/views/users/: users.py
src/users/: apps.py  backends.py  managers.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_avatar_alter_user_first_name_and_more.py  0003_user_is_staff.py
src/users/repo/: token.py  user.py
src/users/services/: entries.py  repo.py
src/users/services/user/: edit_user.py  (+4 more)
src/utils/: exceptions.py  mixins.py  pagination.py
(+23 files in other folders)
